syntax = "proto3";
option go_package = ".;pb";

package grpc;

import "google/protobuf/empty.proto";

// API for working with database.
service Disk {
  // UploadFile upload new file by path.
  // First message should be FileInfo, all next message contains chunk.
  rpc UploadFile (stream UploadData) returns (UUID);
  // DeleteFile remove file by path.
  rpc DeleteFile (DeleteFileInfo) returns (google.protobuf.Empty);
}

message UploadData {
  oneof data {
    Data       info  = 1;
    NewChunk   chunk = 2;
  }
}

message DeleteFileInfo {
  string path = 1;
}

message UUID {
  string value = 1;
}

message Data {
  string path = 1;
  bytes meta = 2;
}

message NewChunk {
  bytes data = 1;
}